--- a/_config.yml
+++ b/_config.yml
@@ -18,16 +18,13 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
+title: Community Resource Network
+email: info@crninfo.org
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  CRN is a 501(c)3 non-profit volunteer organization established in 1998 and serves the greater Puget Sound/Salish Sea area.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "https://crninfo.org" # the base hostname & protocol for your site, e.g. http://example.com
+github_username: Community-Resource-Network
 
 # Build settings
 theme: minima
